[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BankingSystem"
version = "1.0.0"
description = "Banking System"
readme = "README.md"
authors = [
    { name = "Shanmuga Lingam", email = "shanmugalingam2005@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "faker>=13.3.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-html>=4.2.0",
    "pytest-cov>=3.0.0",
    "black>=23.3.0",
    "isort>=5.10.0",
    "sphinx>=5.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
