# Project Configuration
[project]
name = "healthcare-patient-mapping"
version = "1.0.0"
description = "Healthcare system to map patients to doctors based on disease using Faker-generated data"
readme = "README.md"
authors = [
    {name = "Shanmuga Lingam", email = "shanmugalingam2005@gmail.com"}
]
requires-python = ">=3.8"

# Production Dependencies
dependencies = [
    "faker>=13.3.4"
]

# Optional Dependencies (Dev Tools)
[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=3.0.0",
    "black>=23.3.0",
    "isort>=5.10.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0"
]

# Black Formatter Config
[tool.black]
line-length = 88
target-version = ["py38"]

# isort Config
[tool.isort]
profile = "black"
line_length = 88