[project]
name= "asyncio-dashboard"
version = "1.0.0"
description = "A dashboard for monitoring asyncio tasks and events."
authors = [
    { name = "Shanmuga Lingam K", email = "shanmugal@company.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faker>=18.0.0",
    "pydantic>=2.0.0",
    "pydantic[email]>=2.0.0",
    "python-dotenv>=0.19.0",
    "pandas>=2.0.0",
    "aiohttp>=3.8.0",
    "asyncio>=3.4.0",
    "psutil>=5.8.0",
    "websockets>=10.0.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.0.0",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[tool.black]
line-length = 88
target-version = ["py313"]
[tool.isort]
profile = "black"